--- a/react_style_conponent/package.json
+++ b/react_style_conponent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-style_conponents",
+  "name": "react_style_conponent",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.6",
+    "styled-components": "^6.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
